import UIKit

final class MovieQuizViewController: UIViewController, MovieQuizViewControllerProtocol {
    
    func alertPresent( _ alert: UIAlertController) {
        alert.view.accessibilityIdentifier = "Game results"
        present(alert, animated: true)
    }
    
    
    @IBOutlet weak var noButtonClicked: UIButton!
    
...
